:ambulance: fix layout problem

--- a/css/pyexcel.css
+++ b/css/pyexcel.css
@@ -132,12 +132,12 @@ i.feature-circle {
 }
 
 .community-section {
-    height: 200px;
+    height: 300px;
 }
 
 
 .community-section img {
-    width: 400px;
+    width: 350px;
 }
 
 .community-section h3 {
